--- a/slack_interactive_lambda/pyproject.toml
+++ b/slack_interactive_lambda/pyproject.toml
@@ -18,6 +18,7 @@ isort = "^5.12.0"
 pytest = "^7.3.1"
 boto3 = "^1.26.125"
 botocore = "^1.29.125"
+pytest-mock = "^3.10.0"
 
 [tool.black]
 target-version = ['py39']
