--- a/slack_interactive_lambda/pyproject.toml
+++ b/slack_interactive_lambda/pyproject.toml
@@ -19,6 +19,7 @@ pytest = "^7.3.1"
 boto3 = "^1.26.125"
 botocore = "^1.29.125"
 pytest-mock = "^3.10.0"
+pytest-cov = "^4.0.0"
 
 [tool.black]
 target-version = ['py39']
@@ -31,3 +32,8 @@ line_length = 120
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+addopts = "--cov=slack_interactive_lambda"
+testpaths = ["tests",]
+filterwarnings = ["ignore::DeprecationWarning",]
